[gd_scene load_steps=17 format=3 uid="uid://8dac38b54nn2"]

[ext_resource type="Script" path="res://object_scenes/entity/player/player.gd" id="1_2aq3y"]
[ext_resource type="Texture2D" uid="uid://d16xe7eu860t3" path="res://object_scenes/entity/player/echo.png" id="2_8pq45"]
[ext_resource type="Texture2D" uid="uid://btdk0kup8b018" path="res://object_scenes/entity/player/gradient.png" id="2_a7241"]
[ext_resource type="Texture2D" uid="uid://fsgp3cf3dvw8" path="res://object_scenes/entity/player/feet.png" id="2_hjn01"]
[ext_resource type="Material" uid="uid://bqcafj54nrc7g" path="res://ui_scenes/outlineCanvasMaterial.tres" id="2_p74uq"]
[ext_resource type="Texture2D" uid="uid://caa3xwvel355v" path="res://object_scenes/entity/player/ant.png" id="3_1iasw"]
[ext_resource type="Texture2D" uid="uid://c7rr4gjqtj7nr" path="res://object_scenes/entity/player/dust/shape.png" id="4_c6nse"]
[ext_resource type="Texture2D" uid="uid://dls3rsgwd3cmg" path="res://object_scenes/entity/player/tenna.png" id="5_5fllh"]
[ext_resource type="Texture2D" uid="uid://bnwnfdpil6abm" path="res://object_scenes/entity/player/tail.png" id="5_jpg1o"]
[ext_resource type="PackedScene" uid="uid://cqtpmctqdhfpl" path="res://object_scenes/entity/player/ball_3d.tscn" id="6_yg0hy"]

[sub_resource type="Curve" id="Curve_bpmq3"]
_data = [Vector2(0, 0.502669), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.570772, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_th15b"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_7ixas"]
_data = [Vector2(0, 0.462316), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.56011, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_yhn77"]
_data = [Vector2(0, 0.498162), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.827621, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_txa82"]
radius = 5.09902

[sub_resource type="ViewportTexture" id="ViewportTexture_vt4b4"]
viewport_path = NodePath("SubViewport")

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
script = ExtResource("1_2aq3y")
cameraLimitX = Vector2(0, 500)
cameraLimitY = Vector2(0, 300)

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = ExtResource("2_p74uq")

[node name="DASH" type="CPUParticles2D" parent="CanvasGroup"]
amount = 16
lifetime = 0.4
texture = ExtResource("2_8pq45")
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
radial_accel_min = -87.55
radial_accel_max = -11.06
scale_amount_curve = SubResource("Curve_bpmq3")
color_ramp = SubResource("Gradient_th15b")

[node name="LAND" type="CPUParticles2D" parent="CanvasGroup"]
emitting = false
amount = 16
lifetime = 0.4
one_shot = true
explosiveness = 1.0
fixed_fps = 30
texture = ExtResource("4_c6nse")
particle_flag_align_y = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 13.55
initial_velocity_max = 49.94
radial_accel_min = -16.6
radial_accel_max = -8.3
damping_min = 28.111
damping_max = 81.106
scale_amount_curve = SubResource("Curve_7ixas")

[node name="dust" type="CPUParticles2D" parent="CanvasGroup"]
texture = ExtResource("5_jpg1o")
emission_shape = 1
emission_sphere_radius = 6.0
gravity = Vector2(0, 0)
angular_velocity_min = -79.63
angular_velocity_max = 73.0
radial_accel_min = -16.59
radial_accel_max = -16.59
tangential_accel_min = -5.0
tangential_accel_max = 5.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("Curve_yhn77")

[node name="BodyOutline" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 6, 0, 12)
width = 14.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 11

[node name="BodyLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 6, 0, 12)
texture = ExtResource("2_a7241")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_txa82")

[node name="head" type="Node2D" parent="."]

[node name="Ant" type="Sprite2D" parent="head"]
position = Vector2(0, -8)
texture = ExtResource("3_1iasw")

[node name="Feet" type="Sprite2D" parent="head"]
z_index = -1
texture = ExtResource("2_hjn01")
hframes = 2

[node name="Tenna" type="Sprite2D" parent="head"]
position = Vector2(-3, -9)
texture = ExtResource("5_5fllh")

[node name="Tenna2" type="Sprite2D" parent="head"]
position = Vector2(3, -9)
texture = ExtResource("5_5fllh")
flip_h = true

[node name="body" type="Node2D" parent="."]
position = Vector2(0, 7)

[node name="Feet" type="Sprite2D" parent="body"]
z_index = -1
texture = ExtResource("2_hjn01")
hframes = 2

[node name="tail" type="Node2D" parent="."]
position = Vector2(0, 13)

[node name="Feet" type="Sprite2D" parent="tail"]
z_index = -1
texture = ExtResource("2_hjn01")
hframes = 2

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
size = Vector2i(64, 64)

[node name="ball3d" parent="SubViewport" instance=ExtResource("6_yg0hy")]

[node name="BallCenter" type="Node2D" parent="."]

[node name="viewportSprite" type="Sprite2D" parent="BallCenter"]
scale = Vector2(0.4, 0.4)
texture = SubResource("ViewportTexture_vt4b4")

[node name="bro" type="Line2D" parent="BallCenter/viewportSprite"]
show_behind_parent = true
scale = Vector2(2.5, 2.5)
points = PackedVector2Array(0, 0, 0.01, 0.025)
width = 18.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 11

[node name="Camera2D" type="Camera2D" parent="."]
top_level = true

[node name="cover" type="ColorRect" parent="Camera2D"]
visible = false
z_index = 398
offset_left = -962.0
offset_top = -679.0
offset_right = 964.0
offset_bottom = 672.0
color = Color(0, 0, 0, 1)

[node name="holeCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 1)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="boostCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 1)
collision_mask = 64
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="islandCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 1)
collision_mask = 16384
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
